SERVER-18527 Rename hidden parameter in sharded map/reduce